--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ z-index:200;
 
 <!-- Love Letter -->
 <div id="letterBox" class="container hidden">
-<h1>💌 My Love Letter</h1>
+<h1>💌 To my Handsome</h1>
 <div class="letter" id="letterText"></div>
 <button onclick="showProposal()">Continue ❤️</button>
 </div>
@@ -295,3 +295,4 @@ setTimeout(()=>el.remove(),3500);
 </script>
 </body>
 </html>
+
